# cpp-fingerprint-generator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  test_leaks.sh
includes/: globals.hpp  mp3_handler.hpp  wav_handler.hpp
libs/: CMakeLists.txt
src/: globals.cpp  main.cpp  mp3_handler.cpp  wav_handler.cpp
